--- a/.gitignore
+++ b/.gitignore
@@ -7,14 +7,20 @@
 *.o
 *.obj
 
+# Linker output
+*.ilk
+*.map
+*.exp
+
 # Precompiled Headers
 *.gch
 *.pch
 
-# Compiled Dynamic libraries
-*.so
-*.dylib
+# Shared objects
 *.dll
+*.so
+*.so.*
+*.dylib
 
 # Fortran module files
 *.mod
@@ -30,3 +36,25 @@
 *.exe
 *.out
 *.app
+*.i*86
+*.x86_64
+*.hex
+
+# Debug files
+*.dSYM/
+*.su
+*.idb
+*.pdb
+*.core
+
+# Other
+compile_commands.json
+build
+.depend
+.stuff
+scratch
+
+# Laziness
+bak
+*.bak
+*.bak.*
