--- a/src/Gen/CMakeLists.txt
+++ b/src/Gen/CMakeLists.txt
@@ -73,14 +73,14 @@ endmacro()
 
 ADD_ANTLR4_COMMAND(lexer X4Lex.g4 FALSE FALSE x4c_gen_lexer_SOURCES x4c_gen_lexer_HEADERS)
 ADD_ANTLR4_COMMAND(parser X4Parse.g4 TRUE TRUE x4c_gen_parser_SOURCES x4c_gen_parser_HEADERS)
-ADD_ANTLR4_COMMAND(ini X4Config.g4 FALSE FALSE x4c_gen_ini_SOURCES x4c_gen_ini_HEADERS)
+# ADD_ANTLR4_COMMAND(ini X4Config.g4 FALSE FALSE x4c_gen_ini_SOURCES x4c_gen_ini_HEADERS)
 
 ##########################################################################################
 
 add_library(x4c_gen_headers INTERFACE
     ${x4c_gen_parser_HEADERS}
     ${x4c_gen_lexer_HEADERS}
-    ${x4c_gen_ini_HEADERS}
+    # ${x4c_gen_ini_HEADERS}
 )
 
 # add_library(x4c_gen_parser OBJECT ${x4c_gen_parser_SOURCES})
@@ -99,7 +99,16 @@ add_library(x4c_gen_headers INTERFACE
 add_library(x4c_parser OBJECT
     ${x4c_gen_parser_SOURCES}
     ${x4c_gen_lexer_SOURCES}
-    ${x4c_gen_ini_SOURCES}
+    # ${x4c_gen_ini_SOURCES}
+    nothing.c
+)
+
+target_precompile_headers(x4c_parser
+    PRIVATE
+    "../_common.hh"
+    # $<$<COMPILE_LANGUAGE:CXX>:"_common.hh">
+    # $<$<COMPILE_LANGUAGE:CXX>:${CMAKE_CURRENT_BINARY_DIR}/parser/X4Parse.h>
+    # $<$<COMPILE_LANGUAGE:CXX>:${CMAKE_CURRENT_BINARY_DIR}/lexer/X4Lex.h>
 )
 
 add_dependencies(x4c_parser x4c_gen_headers)
