--- a/src/translate/xml_to_script/CMakeLists.txt
+++ b/src/translate/xml_to_script/CMakeLists.txt
@@ -2,8 +2,8 @@
 # src/translate/xml_to_script
 #
 
-add_library(translate_xml_to_script OBJECT
-    nil.cc
-)
-
-add_dependencies(translate_xml_to_script x4c_gen_headers)
+#add_library(translate_xml_to_script OBJECT
+#    nil.cc
+#)
+#
+#add_dependencies(translate_xml_to_script x4c_gen_headers)
