--- a/src/Gen/CMakeLists.txt
+++ b/src/Gen/CMakeLists.txt
@@ -100,16 +100,13 @@ add_library(x4c_parser OBJECT
     ${x4c_gen_parser_SOURCES}
     ${x4c_gen_lexer_SOURCES}
     # ${x4c_gen_ini_SOURCES}
-    nothing.c
+    # nothing.c
 )
 
-target_precompile_headers(x4c_parser
-    PRIVATE
-    "../_common.hh"
-    # $<$<COMPILE_LANGUAGE:CXX>:"_common.hh">
-    # $<$<COMPILE_LANGUAGE:CXX>:${CMAKE_CURRENT_BINARY_DIR}/parser/X4Parse.h>
-    # $<$<COMPILE_LANGUAGE:CXX>:${CMAKE_CURRENT_BINARY_DIR}/lexer/X4Lex.h>
-)
+# target_precompile_headers(x4c_parser
+#    PRIVATE
+#    "../_common.hh"
+# )
 
 add_dependencies(x4c_parser x4c_gen_headers)
 
